{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 96,
  "lineage": "a71ee4d4-8ea0-98ab-276a-c3710704db56",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:613938681023:instance/i-0c99a25e507d74bba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c99a25e507d74bba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-057e38e1e94dab8c5",
            "private_dns": "ip-10-0-1-168.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.168",
            "public_ip": "54.89.206.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bb02f490a6b4650d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f5912f9ce6a51a81",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b87e48fe76cfc336"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_security_group.My_sg",
            "aws_subnet.frst_subnet",
            "aws_vpc.frst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613938681023:internet-gateway/igw-0e6717fb8064d129d",
            "id": "igw-0e6717fb8064d129d",
            "owner_id": "613938681023",
            "tags": {
              "Name": "valod_aws_internet_gateway"
            },
            "tags_all": {
              "Name": "valod_aws_internet_gateway"
            },
            "vpc_id": "vpc-0ba3b2a14cbd011df"
          },
          "dependencies": [
            "aws_vpc.frst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "interface_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613938681023:network-interface/eni-09e55d978314128af",
            "attachment": [
              {
                "attachment_id": "eni-attach-04508cda6b421a3eb",
                "device_index": 1,
                "instance": "i-0c99a25e507d74bba"
              }
            ],
            "id": "eni-09e55d978314128af",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:20:c0:37:d6:17",
            "owner_id": "613938681023",
            "private_ip": "10.0.1.10",
            "private_ip_list": [
              "10.0.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b87e48fe76cfc336"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f5912f9ce6a51a81"
          },
          "dependencies": [
            "aws_instance.app_server",
            "aws_internet_gateway.gw",
            "aws_security_group.My_sg",
            "aws_subnet.frst_subnet",
            "aws_vpc.frst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "first_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613938681023:route-table/rtb-06128874662d697d7",
            "id": "rtb-06128874662d697d7",
            "owner_id": "613938681023",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e6717fb8064d129d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "valod_route_table"
            },
            "tags_all": {
              "Name": "valod_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba3b2a14cbd011df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.frst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005253a4d803d79c7",
            "route_table_id": "rtb-06128874662d697d7",
            "subnet_id": "subnet-0f5912f9ce6a51a81"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.first_route_table",
            "aws_subnet.frst_subnet",
            "aws_vpc.frst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613938681023:security-group/sg-0b87e48fe76cfc336",
            "description": "SG for ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b87e48fe76cfc336",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "valod_security_grup",
            "name_prefix": "",
            "owner_id": "613938681023",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "valod_security_grup"
            },
            "tags_all": {
              "Name": "valod_security_grup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba3b2a14cbd011df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.frst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frst_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613938681023:subnet/subnet-0f5912f9ce6a51a81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5912f9ce6a51a81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "613938681023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "valod_publik_subnet"
            },
            "tags_all": {
              "Name": "valod_publik_subnet"
            },
            "vpc_id": "vpc-0ba3b2a14cbd011df"
          },
          "dependencies": [
            "aws_vpc.frst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "frst_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613938681023:vpc/vpc-0ba3b2a14cbd011df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c8034fe8b5ef71bf",
            "default_route_table_id": "rtb-022278cd6b593d9cf",
            "default_security_group_id": "sg-08367713347bc56d5",
            "dhcp_options_id": "dopt-0172d848d55a591a0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba3b2a14cbd011df",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-022278cd6b593d9cf",
            "owner_id": "613938681023",
            "tags": {
              "Name": "valod_vpc"
            },
            "tags_all": {
              "Name": "valod_vpc"
            }
          }
        }
      ]
    }
  ]
}